[tool.poetry]
name = "dog-facts-api"
version = "0.1.0"
description = ""
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
dynaconf = "^3.1.7"
black = "^21.9b0"
pre-commit = "^2.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
